--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "dev": "NODE_ENV=development node server.js"
   },
+  "dependencies": {
+    "axios": "^1.6.7"
+  },
   "engines": {
     "node": ">=18"
   }
