--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "jsdom": "^24.0.0"
   },
   "engines": {
     "node": ">=18"
