--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "dev": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "jsdom": "^24.0.0"
   },
   "engines": {
